# begone-mon

./: README.md
begone/: Cargo.toml
begone/src/: config.rs  discovery.rs  killer.rs  lib.rs
test-data/test-npm-project-1/: package-lock.json  package.json
test-data/test-npm-project-2/: package-lock.json  package.json
